tests/pass/empty_struct.jolt
struct Empty {
}

fn main() void {
}
