tests/fail/wrong_arg_count.jolt
fn f() void {
    ret;
}

fn main() void {
    f(1);
}
